--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.410",
+    "@remotion/tailwind-v4": "4.0.410",
+    "js-yaml": "^4.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "remotion": "4.0.410",
-    "@remotion/tailwind-v4": "4.0.410",
     "tailwindcss": "4.0.0"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
   "scripts": {
     "dev": "remotion studio",
     "build": "remotion bundle",
+    "render": "remotion render src/index.tsx 跳跳糖-中国风 --output ./output/video.mp4 --frames 0-3149",
     "upgrade": "remotion upgrade",
     "lint": "eslint src && tsc"
   },
